partial recoloration: still a wip to get everything else on the system themed

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -66,32 +66,33 @@ color=1c1b19 fbb829
 # alternate-scroll-mode=yes
 
 [colors]
-alpha=1.0
-foreground=fce8c3
-background=1c1b19
-regular0=1c1b19  # black
-regular1=ef2f27  # red
-regular2=519f50  # green
-regular3=fbb829  # yellow
-regular4=2c78bf  # blue
-regular5=e02c6d  # magenta
-regular6=0aaeb3  # cyan
-regular7=baa67f  # white
-bright0=918175   # bright black
-bright1=f75341   # bright red
-bright2=98bc37   # bright green
-bright3=fed06e   # bright yellow
-bright4=68a8e4   # bright blue
-bright5=ff5c8f   # bright magenta
-bright6=2be4d0   # bright cyan
-bright7=fce8c3   # bright white
-# 16 = <256-color palette #16>
-# ...
-# 255 = <256-color palette #255>
-# selection-foreground=<inverse foreground/background>
-# selection-background=<inverse foreground/background>
-# jump-labels=<regular0> <regular3>
-# urls=<regular3>
+# Gslob nature-suede from xcolors.net
+background=170F0D
+foreground=746C48
+
+regular0=392925
+bright0=544B2E
+
+regular1=98724C
+bright1=AF652F
+
+regular2=908F32
+bright2=C3C13D
+
+regular3=AA964C
+bright3=C8B55B
+
+regular4=7B854E
+bright4=70A16C
+
+regular5=6B5644
+bright5=98724C
+
+regular6=5C5142
+bright6=778725
+
+regular7=C8B55B
+bright7=E4DC8C
 
 [csd]
 # preferred=server
