--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -65,34 +65,7 @@ color=1c1b19 fbb829
 # hide-when-typing=no
 # alternate-scroll-mode=yes
 
-[colors]
-# Gslob nature-suede from xcolors.net
-background=170F0D
-foreground=746C48
-
-regular0=392925
-bright0=544B2E
-
-regular1=98724C
-bright1=AF652F
-
-regular2=908F32
-bright2=C3C13D
-
-regular3=AA964C
-bright3=C8B55B
-
-regular4=7B854E
-bright4=70A16C
-
-regular5=6B5644
-bright5=98724C
-
-regular6=5C5142
-bright6=778725
-
-regular7=C8B55B
-bright7=E4DC8C
+# Colors set by pywal
 
 [csd]
 # preferred=server
