foot: update font size, fix DPI issues on scaled monitors

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=monospace:size=9
+font=monospace:size=11
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -18,7 +18,9 @@ font=monospace:size=9
 # vertical-letter-offset=0
 # underline-offset=<font metrics>
 # box-drawings-uses-font-glyphs=no
-# dpi-aware=yes
+
+# https://codeberg.org/dnkl/foot/issues/714#issuecomment-303769
+dpi-aware=no
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
@@ -56,7 +58,7 @@ launch=xdg-open ${url}
 [cursor]
 style=beam
 # color=111111 dcdccc
-color=1c1b19 fbb829
+# color=1c1b19 fbb829
 # blink=no
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -65,7 +67,10 @@ color=1c1b19 fbb829
 # hide-when-typing=no
 # alternate-scroll-mode=yes
 
-# Colors set by pywal
+[colors]
+# pywal
+alpha=1
+foreground = cccccc
 
 [csd]
 # preferred=server
