--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -1,5 +1,8 @@
-theme = "solarized-dark"
-icons = "awesome"
+[theme]
+name = "native"
+
+[icons]
+name = "awesome"
 
 [[block]]
 block = "focused_window"
@@ -9,6 +12,9 @@ show_marks = "visible"
 [[block]]
 block = "music"
 dynamic_width = true
+max_width = 50
+marquee = false
+hide_when_empty = true
 
 [[block]]
 block = "disk_space"
