fonts: select new ones as usual

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,105 +1,113 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0' encoding='UTF-8'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-	<match target="scan">
-		<test name="family">
-			<string>Twitter Color Emoji</string>
-		</test>
-		<edit name="scalable" mode="assign">
-			<bool>true</bool>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="prgname">
-			<string>foot</string>
-		</test>
-		<edit name="family" mode="prepend_first">
-			<string>FSD Emoji</string>
-		</edit>
-		<edit name="autohint" mode="assign">
-			<bool>false</bool>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="prgname">
-			<string>alacritty</string>
-		</test>
-		<edit name="family" mode="prepend_first">
-			<string>FSD Emoji</string>
-		</edit>
-		<edit name="autohint" mode="assign">
-			<bool>false</bool>
-		</edit>
-	</match>
-
-	<match>
-		<!-- If the requested font is serif -->
-		<test qual="any" name="family">
-			<string>serif</string>
-		</test>
-		<!-- Make Noto Serif the first result -->
-		<edit name="family" mode="prepend_first">
-			<string>PT Serif</string>
-		</edit>
-		<!-- Followed by Twitter Color Emoji -->
-		<edit name="family" mode="prepend_first">
-			<string>Twitter Color Emoji</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<!-- If the requested font is sans-serif -->
-		<test qual="any" name="family">
-			<string>sans-serif</string>
-		</test>
-		<edit name="family" mode="prepend_first">
-			<string>Lato</string>
-		</edit>
-		<!-- Followed by Twitter Color Emoji -->
-		<edit name="family" mode="prepend_first">
-			<string>Twitter Color Emoji</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<!-- If the requested font is monospace -->
-		<test qual="any" name="family">
-			<string>monospace</string>
-		</test>
-		<edit name="family" mode="prepend_first">
-			<string>FSD Emoji</string>
-		</edit>
-		<edit name="family" mode="prepend_first">
-			<string>PragmataPro</string>
-		</edit>
-		<!-- Followed by Twitter Color Emoji -->
-		<edit name="family" mode="prepend_first">
-			<string>Twitter Color Emoji</string>
-		</edit>
-	</match>
-
-<!-- Add emoji generic family -->
-  <alias binding="strong">
-	  <family>emoji</family>
-	  <default><family>Twitter Color Emoji</family></default>
-  </alias>
-
-  <!-- Alias requests for the other emoji fonts -->
-  <alias binding="strong">
-	  <family>Apple Color Emoji</family>
-	  <prefer><family>Twitter Color Emoji</family></prefer>
-	  <default><family>sans-serif</family></default>
-  </alias>
-  <alias binding="strong">
-	  <family>Segoe UI Emoji</family>
-	  <prefer><family>Twitter Color Emoji</family></prefer>
-	  <default><family>sans-serif</family></default>
-  </alias>
-  <alias binding="strong">
-	  <family>Emoji One Color</family>
-	  <prefer><family>Twitter Color Emoji</family></prefer>
-	  <default><family>sans-serif</family></default>
-  </alias>
+    <match target="scan">
+        <test name="family">
+            <string>Twitter Color Emoji</string>
+        </test>
+        <edit mode="assign" name="scalable">
+            <bool>true</bool>
+        </edit>
+    </match>
+    <match target="pattern">
+        <test name="prgname">
+            <string>foot</string>
+        </test>
+        <edit mode="prepend_first" name="family">
+            <string>FSD Emoji</string>
+        </edit>
+        <edit mode="assign" name="autohint">
+            <bool>false</bool>
+        </edit>
+    </match>
+    <match target="pattern">
+        <test name="prgname">
+            <string>alacritty</string>
+        </test>
+        <edit mode="prepend_first" name="family">
+            <string>FSD Emoji</string>
+        </edit>
+        <edit mode="assign" name="autohint">
+            <bool>false</bool>
+        </edit>
+    </match>
+    <match>
+        <!-- If the requested font is serif -->
+        <test name="family" qual="any">
+            <string>serif</string>
+        </test>
+        <!-- Make Noto Serif the first result -->
+        <edit mode="prepend_first" name="family">
+            <string>Literata</string>
+        </edit>
+        <!-- Followed by Twitter Color Emoji -->
+        <edit mode="prepend_first" name="family">
+            <string>Twitter Color Emoji</string>
+        </edit>
+    </match>
+    <match target="pattern">
+        <!-- If the requested font is sans-serif -->
+        <test name="family" qual="any">
+            <string>sans-serif</string>
+        </test>
+        <edit mode="prepend_first" name="family">
+            <string>DM Sans</string>
+        </edit>
+        <!-- Followed by Twitter Color Emoji -->
+        <edit mode="prepend_first" name="family">
+            <string>Twitter Color Emoji</string>
+        </edit>
+    </match>
+    <match target="pattern">
+        <!-- If the requested font is monospace -->
+        <test name="family" qual="any">
+            <string>monospace</string>
+        </test>
+        <edit mode="prepend_first" name="family">
+            <string>FSD Emoji</string>
+        </edit>
+        <edit mode="prepend_first" name="family">
+            <string>Hermit</string>
+        </edit>
+        <!-- Followed by Twitter Color Emoji -->
+        <edit mode="prepend_first" name="family">
+            <string>Twitter Color Emoji</string>
+        </edit>
+    </match>
+    <!-- Add emoji generic family -->
+    <alias binding="strong">
+        <family>emoji</family>
+        <default>
+            <family>Twitter Color Emoji</family>
+        </default>
+    </alias>
+    <!-- Alias requests for the other emoji fonts -->
+    <alias binding="strong">
+        <family>Apple Color Emoji</family>
+        <prefer>
+            <family>Twitter Color Emoji</family>
+        </prefer>
+        <default>
+            <family>sans-serif</family>
+        </default>
+    </alias>
+    <alias binding="strong">
+        <family>Segoe UI Emoji</family>
+        <prefer>
+            <family>Twitter Color Emoji</family>
+        </prefer>
+        <default>
+            <family>sans-serif</family>
+        </default>
+    </alias>
+    <alias binding="strong">
+        <family>Emoji One Color</family>
+        <prefer>
+            <family>Twitter Color Emoji</family>
+        </prefer>
+        <default>
+            <family>sans-serif</family>
+        </default>
+    </alias>
+    <dir>/home/j/.Fontmatrix/Activated</dir>
 </fontconfig>
