--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,7 +12,7 @@ set $up k
 set $right l
 
 set $term foot
-set $menu wofi -Imi -t $term --show drun,run -p 'Run:'
+set $menu fuzzel
 set $lockscreen swaylock -c 000000
 
 gaps outer 5
