chore: nov 2023 bump, partially incomplete

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -31,14 +31,27 @@
             <bool>false</bool>
         </edit>
     </match>
+	<match target="font">
+		<edit name="autohint" mode="assign">
+			<bool>true</bool>
+		</edit>
+		<edit name="hinting" mode="assign">
+			<bool>true</bool>
+		</edit>
+		<edit mode="assign" name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+		<edit mode="assign" name="lcdfilter">
+			<const>lcddefault</const>
+		</edit>
+	</match>
     <match>
         <!-- If the requested font is serif -->
         <test name="family" qual="any">
             <string>serif</string>
         </test>
-        <!-- Make Noto Serif the first result -->
         <edit mode="prepend_first" name="family">
-            <string>Literata</string>
+            <string>Source Serif Pro</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -51,7 +64,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>DM Sans</string>
+            <string>Atkinson Hyperlegible</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -67,7 +80,8 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>Hermit</string>
+            <!--<string>Unolexic</string>-->
+            <string>Iosevka Comfy</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
