--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=monospace:size=11
+font=monospace:size=14
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -57,8 +57,9 @@ launch=xdg-open ${url}
 
 [cursor]
 style=beam
-# color=111111 dcdccc
-# color=1c1b19 fbb829
+#color=232136 e0def4 # ROSE PINE MOON
+# color=53676d 53676d # SELENIZED
+color=faf4ed 575279 # ROSE PINE DAWN
 # blink=no
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -67,10 +68,117 @@ style=beam
 # hide-when-typing=no
 # alternate-scroll-mode=yes
 
+# Rose-Piné Moon (By cement-drinker)
 [colors]
-# pywal
-alpha=1
-foreground = cccccc
+#background=232136
+#foreground=e0def4
+#regular0=393552	  # black (Overlay)
+#regular1=eb6f92	  # red (Love)
+#regular2=3e8fb0   # green (Pine)
+#regular3=f6c177   # yellow (Gold)
+#regular4=9ccfd8	   # blue (Foam)
+#regular5=c4a7e7	  # magenta (Iris)
+#regular6=ea9a97	   # cyan (Rose)
+#regular7=e0def4   # white (Text)
+#
+#bright0=393552	   # bright black (Overlay)
+#bright1=eb6f92	  # bright red (Love)
+#bright2=3e8fb0   # bright green (Pine)
+#bright3=f6c177   # bright yellow (Gold)
+#bright4=9ccfd8	   # bright blue (Foam)
+#bright5=c4a7e7	  # bright magenta (Iris)
+#bright6=ea9a97	   # bright cyan (Rose)
+#bright7=e0def4   # bright white (Text)
+
+# # https://github.com/jan-warchol/selenized
+# foreground=53676d
+# #foreground_bold=3a4d53
+# #foreground_dim=888888
+# background=fbf3db
+
+# # if unset, will reverse foreground and background
+# #highlight=d5cdb6
+
+# # colors from color0 to color254 can be set
+# regular0=ece3cc
+# regular1=d2212d
+# regular2=489100
+# regular3=ad8900
+# regular4=0072d4
+# regular5=ca4898
+# regular6=009c8f
+# regular7=909995
+# bright0=d5cdb6
+# bright1=cc1729
+# bright2=428b00
+# bright3=a78300
+# bright4=006dce
+# bright5=c44392
+# bright6=00978a
+# bright7=3a4d53
+
+# Rose Pine Dawn
+[colors]
+background=faf4ed
+foreground=575279
+regular0=f2e9e1	  # black (Overlay)
+regular1=b4637a	  # red (Love)
+regular2=31748f   # green (Pine)
+regular3=ea9d34   # yellow (Gold)
+regular4=56949f	   # blue (Foam)
+regular5=907aa9	  # magenta (Iris)
+regular6=d7827e	   # cyan (Rose)
+regular7=575279   # white (Text)
+
+bright0=9893a5	   # bright black (Overlay)
+bright1=b4637a	  # bright red (Love)
+bright2=31748f   # bright green (Pine)
+bright3=ea9d34   # bright yellow (Gold)
+bright4=56949f	   # bright blue (Foam)
+bright5=907aa9	  # bright magenta (Iris)
+bright6=d7827e	   # bright cyan (Rose)
+bright7=575279   # bright white (Text)
+
+# "Dawn" by "Escapist", from terminal.sexy
+[colors]
+
+foreground      = 9b9081
+#foreground_bold = 9b9081
+#cursor          = 9b9081
+background      = 181b20
+
+# black
+regular0 = 353535
+bright0  = 5f5f5f
+
+# red
+regular1 = 744b40
+bright1  = 785850
+
+# green
+regular2 = 6d6137
+bright2  = 6f6749
+
+# yellow
+regular3 = 765636
+bright3  = 776049
+
+# blue
+regular4 = 61564b
+bright4  = 696057
+
+# magenta
+regular5 = 6b4a49
+bright5  = 6f5a59
+
+# cyan
+regular6 = 435861
+bright6  = 525f66
+
+# white
+regular7 = b3b3b3
+bright7  = cdcdcd
+
 
 [csd]
 # preferred=server
