--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
 set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",xterm-256color:RGB,alacritty-256color:RGB"
 
 setw -g aggressive-resize on
 
@@ -52,8 +57,6 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-set -g default-terminal "screen-256color"
-
 # The modes {
 setw -g clock-mode-colour colour135
 # }
@@ -72,10 +75,6 @@ setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=c
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # }
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
