--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -37,7 +37,14 @@ block = "cpu"
 interval = 1
 
 [[block]]
+block = "backlight"
+
+[[block]]
 block = "sound"
+
+[[block]]
+block = "battery"
+format = "{percentage} {time}"
 
 [[block]]
 block = "time"
