vim and font changes, mostly

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -81,7 +81,7 @@
         </edit>
         <edit mode="prepend_first" name="family">
             <!--<string>Unolexic</string>-->
-            <string>Iosevka Comfy</string>
+            <string>Sudo</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
