i3status: Only attempt to read backlight if one exists (fix crash on desktops)

--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -38,6 +38,7 @@ interval = 1
 
 [[block]]
 block = "backlight"
+if_command = "directory-not-empty /sys/class/backlight"
 invert_icons = true
 
 [[block]]
