fira sans/serif fonts everywhere

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -51,7 +51,7 @@
             <string>serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Source Serif Pro</string>
+            <string>Fira Serif</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -64,7 +64,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Atkinson Hyperlegible</string>
+            <string>Fira Sans</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
