nvim: "boring" colorscheme, heavily modified

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Ayu-Dark
-gtk-icon-theme-name=Arc
+gtk-theme-name=rose-pine-dawn-gtk
+gtk-icon-theme-name=rose-pine-moon-icons
 gtk-font-name=PT Sans 11
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
