mpv: use vulkan renderer

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,6 +1,9 @@
 profile=gpu-hq
 
-gpu-context=wayland
+#gpu-context=wayland
 hwdec=vaapi
+vo=gpu-next
+gpu-api=vulkan
+gpu-context=waylandvk
 
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
