sway: bigger gaps and general readability

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,6 +1,6 @@
 # Read `man 5 sway` for a complete reference.
 
-set $colors sexy-trim-yer-beard
+set $colors rose-pine
 
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
@@ -15,8 +15,8 @@ set $term foot
 set $menu fuzzel
 set $lockscreen swaylock -c 000000
 
-gaps outer 5
-gaps inner 5
+gaps outer 8
+gaps inner 8
 
 # Hide cursor after 5s of mouse movement
 seat seat0 hide_cursor 5000
@@ -263,8 +263,9 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+default_border pixel 4
 # Eliminate titlebars
-for_window [title="^.*"] border pixel 1
+for_window [app_id=".*"] border pixel 4
 for_window [title="Firefox - Sharing Indicator"] floating enable
 # ^ seems to have stopped working in v84 because of course it did
 for_window [shell="xwayland"] title_format "%title [XWayland]"
