--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -51,7 +51,7 @@
             <string>serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Bergen Text</string>
+            <string>Fira Serif</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -64,7 +64,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Bergen Sans</string>
+            <string>Fira Sans</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -81,7 +81,7 @@
         </edit>
         <edit mode="prepend_first" name="family">
             <!--<string>Unolexic</string>-->
-			<string>Bergen Mono</string>
+            <string>Spleen 16x32</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
