--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -80,8 +80,7 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <!--<string>Unolexic</string>-->
-            <string>Spleen 16x32</string>
+            <string>MonoLisa</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
