--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -64,7 +64,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Fira Sans</string>
+            <string>Inclusive Sans</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -80,7 +80,8 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>MonoLisa</string>
+            <!-- <string>MonoLisa</string> -->
+            <string>IntelOneMono</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
