fonts and monitors and aliases

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -81,7 +81,7 @@
         </edit>
         <edit mode="prepend_first" name="family">
             <!-- <string>MonoLisa</string> -->
-            <string>IntelOneMono</string>
+            <string>Monaspace Krypton</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
