--- a/distrobox.ini
+++ b/distrobox.ini
@@ -19,6 +19,13 @@ home=~/.distrobox/steam
 replace=true
 start_now=false
 
+[bespoke]
+additional_flags="--runtime /usr/bin/crun --group-add keep-groups"
+image=oci.klar.sh/bow-bespoke:latest
+home=~/.distrobox/bespoke
+replace=true
+start_now=false
+
 [yuzu]
 additional_flags="--runtime /usr/bin/crun --group-add keep-groups"
 image=oci.klar.sh/bow-yuzu:latest
