--- a/.config/sway/snowcone.config
+++ b/.config/sway/snowcone.config
@@ -1,4 +1,3 @@
 include ~/.config/sway/common.config
 
-output HDMI-A-1 position 0,0 scale 1.0 transform 90
-output DP-1 mode 2560x2880 position 2881,0 scale 1.0 transform 90
+output DP-3 mode 5120x2160@120Hz
