fonts: cartograph mono cf+ibm plex sans

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -64,7 +64,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Inclusive Sans</string>
+            <string>IBM Plex Sans</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -80,8 +80,7 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <!-- <string>MonoLisa</string> -->
-            <string>Monaspace Krypton</string>
+            <string>Cartograph Mono CF</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
