--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,10 @@
 	email = josh@klar.sh
 	name = Josh Klar
 	signingkey = josh@klar.sh
+[color]
+	pager = yes
+[core]
+	pager = bat --style=plain
 [commit]
 	gpgsign = true
 	verbose = true
@@ -33,6 +37,9 @@
 
 	dlog = log -p --ext-diff
 	dshow = show --ext-diff
+
+	mainup = !git co main && git pull
+	masterup = !git co master & git pull
 [fetch]
 	prune = true
 	prunetags = true
@@ -53,15 +60,6 @@
 	insteadOf = https://github.com/
 [init]
 	defaultBranch = main
-
-[pager]
-	# lol alias above works much better without a pager, and it has taken me
-	# something like 6 years to finally bother actually setting this. Finally,
-	# commit IDs that don't disappear when I need to do something else in the
-	# same terminal pane! Terminals (and multiplexers) have scrollback buffers,
-	# use them.
-	log = false
-
 
 # The https://jvns.ca/blog/2024/02/16/popular-git-config-options/ section
 [rebase]
